--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
+    implementation 'androidx.cardview:cardview:1.0.0'
+
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
     implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
